--- a/Sources/TelegramBot/TelegramBot.csproj
+++ b/Sources/TelegramBot/TelegramBot.csproj
@@ -1,8 +1,34 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<Nullable>enable</Nullable>
+		<VersionPrefix>11.0.1</VersionPrefix>
+		<Authors>Vadim Belov</Authors>
+		<Company>BigmakCode</Company>
+		<Product>TelegramBot.NET</Product>
+		<Description>Ready-to-use library for convenient development of Telegram bots.</Description>
+		<Copyright>Copyright © Vadim Belov 2023</Copyright>
+		<Summary>Ready-to-use library for convenient development of Telegram bots.</Summary>
+		<NeutralLanguage>en-US</NeutralLanguage>
+		<Title>TelegramBot.NET</Title>
+		<PackageId>TelegramBot.NET</PackageId>
+		<PackageTags>telegram</PackageTags>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageIcon>packageIcon.png</PackageIcon>
+		<PackageIconUrl>https://raw.githubusercontent.com/BigMakCode/TelegramBot.NET/main/Sources/TelegramBot/packageIcon.png</PackageIconUrl>
+		<PackageProjectUrl>https://github.com/BigMakCode/TelegramBot.NET</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/BigMakCode/TelegramBot.NET.git</RepositoryUrl>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<RootNamespace>TelegramBot.NET</RootNamespace>
+		<AssemblyName>TelegramBot.NET</AssemblyName>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Include="..\..\LICENSE.md" Pack="true" PackagePath="LICENSE.md" />
+		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
+		<None Include="packageIcon.png" Pack="true" PackagePath="\" />
+	</ItemGroup>
 </Project>
