--- a/Sources/TelegramBot.ConsoleTest/TelegramBot.ConsoleTest.csproj
+++ b/Sources/TelegramBot.ConsoleTest/TelegramBot.ConsoleTest.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\TelegramBot\TelegramBot.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Telegram.Bot" Version="19.0.0" />
+	</ItemGroup>
 
 </Project>
