--- a/Sources/TelegramBot.ConsoleTest/TelegramBot.ConsoleTest.csproj
+++ b/Sources/TelegramBot.ConsoleTest/TelegramBot.ConsoleTest.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Telegram.Bot" Version="19.0.0" />
+	  <ProjectReference Include="..\TelegramBot\TelegramBot.csproj" />
 	</ItemGroup>
 
 </Project>
