--- a/Sources/TelegramBot.ConsoleTest/TelegramBot.ConsoleTest.csproj
+++ b/Sources/TelegramBot.ConsoleTest/TelegramBot.ConsoleTest.csproj
@@ -8,6 +8,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Content Include="appsettings.Development.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	  <Content Include="appsettings.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\TelegramBot\TelegramBot.csproj" />
 	</ItemGroup>
 
