--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,10 @@ jobs:
     - name: Build and publish NuGet package
       env:
         NUGET_KEY: ${{ secrets.NUGET_KEY }}
+        GITHUB_KEY: ${{ secrets.GITHUB_KEY }}
       run: |
         cd Sources/TelegramBot
         dotnet build --configuration Release
         dotnet pack --configuration Release --output nupkg
-        dotnet nuget push nupkg/*.nupkg --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/NAMESPACE/index.json"
+        dotnet nuget push nupkg/*.nupkg --api-key $GITHUB_KEY --source "github"
         dotnet nuget push nupkg/*.nupkg --api-key $NUGET_KEY --source https://api.nuget.org/v3/index.json
