--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -36,7 +36,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Build and Pack NuGet package
-      run: dotnet pack src/services/Florage.Shared/Florage.Shared.csproj -p:Version='${{ steps.gitversion.outputs.SemVer }}' -c Release
+      run: dotnet pack --configuration Release --output nupkg -p:Version='${{ steps.gitversion.outputs.SemVer }}' 
     - name: Upload NuGet package to GitHub
       uses: actions/upload-artifact@v2
       with:
@@ -55,7 +55,7 @@ jobs:
       with:
         name: nugetPackage
     - name: Prep packages
-      run: dotnet nuget add source --username yourusername --password ${{ secrets.NUGET_KEY }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/BigMakCode/index.json"
+      run: dotnet nuget add source --username BigMakCode --password ${{ secrets.NUGET_KEY }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/BigMakCode/index.json"
     - name: Push package to GitHub packages 
       if: needs.build.outputs.CommitsSinceVersionSource > 0 #Only release if there has been a commit/version change  
       run: dotnet nuget push nugetPackage/*.nupkg --api-key ${{ secrets.NUGET_KEY }}  --source "github"
