--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Upload NuGet package to GitHub
       uses: actions/upload-artifact@v2
       with:
-        name: nugetPackage
+        name: nupkg
         path: bin/Release/ 
         
   release:
@@ -56,7 +56,7 @@ jobs:
     - name: Download nuget package artifact
       uses: actions/download-artifact@v1.0.0
       with:
-        name: nugetPackage
+        name: nupkg
     - name: Prep packages
       run: dotnet nuget add source --username BigMakCode --password ${{ secrets.NUGET_KEY }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/BigMakCode/index.json"
     - name: Push package to GitHub packages 
@@ -80,5 +80,5 @@ jobs:
       with:
         tag: ${{ needs.build.outputs.Version }}
         name: Release ${{ needs.build.outputs.Version }}
-        artifacts: "nugetPackage/*"
+        artifacts: "nupkg/*"
         token: ${{ secrets.NUGET_PACKAGE_TOKEN }}
