Update path for nupkg artifact in publish-release.yml

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -44,7 +44,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: nupkg
-        path: nupkg
+        path: Sources/TelegramBot/nupkg
         
   release:
     runs-on: ubuntu-latest    
