--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -58,18 +58,18 @@ jobs:
       with:
         name: nupkg
     - name: Prep packages
-      run: dotnet nuget add source --username BigMakCode --password ${{ secrets.NUGET_KEY }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/BigMakCode/index.json"
+      run: dotnet nuget add source --username BigMakCode --password ${{ secrets.DEPLOY_GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/BigMakCode/index.json"
     - name: Push package to GitHub packages 
       if: needs.build.outputs.CommitsSinceVersionSource > 0 #Only release if there has been a commit/version change  
       run: |
-        dotnet nuget push nupkg/*.nupkg --api-key ${{ secrets.NUGET_KEY }}  --source "github"
+        dotnet nuget push nupkg/*.nupkg --api-key ${{ secrets.DEPLOY_GITHUB_TOKEN }}  --source "github"
     
     #Create release
     - name: Create Release
       if: 1 == 0 #needs.build.outputs.CommitsSinceVersionSource > 0 #Only release if there has been a commit/version change
       uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.NUGET_KEY }} 
+        GITHUB_TOKEN: ${{ secrets.DEPLOY_GITHUB_TOKEN }} 
       with:
         tag_name: ${{ needs.build.outputs.Version }}
         release_name: Release ${{ needs.build.outputs.Version }}
@@ -80,4 +80,4 @@ jobs:
         tag: ${{ needs.build.outputs.Version }}
         name: Release ${{ needs.build.outputs.Version }}
         artifacts: "nupkg/*"
-        token: ${{ secrets.NUGET_PACKAGE_TOKEN }}
+        token: ${{ secrets.DEPLOY_GITHUB_TOKEN }}
