chore: Update path for nupkg artifact in publish-release.yml

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -62,7 +62,8 @@ jobs:
     - name: Push package to GitHub packages 
       if: needs.build.outputs.CommitsSinceVersionSource > 0 #Only release if there has been a commit/version change  
       run: |
-        dotnet nuget push nupkg/*.nupkg --api-key ${{ secrets.DEPLOY_GITHUB_TOKEN }}  --source "github"
+        dotnet nuget push nupkg/*.nupkg --skip-duplicate --api-key ${{ secrets.DEPLOY_GITHUB_TOKEN }}  --source "github"
+        dotnet nuget push nupkg/*.nupkg --skip-duplicate --api-key $NUGET_KEY --source https://api.nuget.org/v3/index.json
     
     #Create release
     - name: Create Release
