chore: Add Microsoft.EntityFrameworkCore.Sqlite package reference to project file

--- a/Sources/TelegramBot.ConsoleTest/TelegramBot.ConsoleTest.csproj
+++ b/Sources/TelegramBot.ConsoleTest/TelegramBot.ConsoleTest.csproj
@@ -11,6 +11,7 @@
 		<Content Include="appsettings.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.7" />
 		<ProjectReference Include="..\TelegramBot\TelegramBot.csproj" />
 	</ItemGroup>
 
