--- a/Sources/TelegramBot.ConsoleTest/TelegramBot.ConsoleTest.csproj
+++ b/Sources/TelegramBot.ConsoleTest/TelegramBot.ConsoleTest.csproj
@@ -12,6 +12,10 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.7" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<ProjectReference Include="..\TelegramBot\TelegramBot.csproj" />
 	</ItemGroup>
 
