Integrate hosted services for better lifecycle management
Enhanced the bot's lifecycle management by integrating hosted services using `Microsoft.Extensions.Hosting`. This includes:

- Adding `Microsoft.Extensions.Hosting.Abstractions` package to `TelegramBot.csproj`.
- Modifying `BotApp.cs` to start and stop hosted services in a structured manner.
- Replacing `Task.Delay(-1, token).Wait(token);` with a more robust approach.
- Adding logging to provide better insights into the bot's operational state, especially when stopping.

--- a/Sources/TelegramBot/TelegramBot.csproj
+++ b/Sources/TelegramBot/TelegramBot.csproj
@@ -29,6 +29,7 @@
 		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
 		<None Include="packageIcon.png" Pack="true" PackagePath="\" />
 		<None Include="..\..\LICENSE.md" Pack="true" PackagePath="LICENSE.md" />
+		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
 		<PackageReference Include="Telegram.Bot" Version="19.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
