Remove LFS settings and package icon URL
Removed numerous lines from the .gitattributes file that specified various file types to be managed by Git LFS, including images, audio files, video files, documents, archives, and binaries. Additionally, the <PackageIconUrl> element was removed from the TelegramBot.csproj file, which previously specified the URL to the package icon hosted on GitHub.

--- a/Sources/TelegramBot/TelegramBot.csproj
+++ b/Sources/TelegramBot/TelegramBot.csproj
@@ -13,8 +13,7 @@
 		<PackageId>TelegramBot.NET</PackageId>
 		<PackageTags>telegram</PackageTags>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<PackageIcon>packageIcon.png</PackageIcon>
-		<PackageIconUrl>https://media.githubusercontent.com/media/bvdcode/TelegramBot.NET/main/Sources/TelegramBot/packageIcon.png</PackageIconUrl>
+		<PackageIcon>icon.png</PackageIcon>
 		<PackageProjectUrl>https://github.com/bvdcode/TelegramBot.NET</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/bvdcode/TelegramBot.NET</RepositoryUrl>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -27,7 +26,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
-		<None Include="packageIcon.png" Pack="true" PackagePath="\" />
+		<None Include="icon.png" Pack="true" PackagePath="\" />
 		<None Include="..\..\LICENSE.md" Pack="true" PackagePath="LICENSE.md" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
 		<PackageReference Include="System.Text.Json" Version="8.0.4" />
